--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"extends": "@sapphire/ts-config",
 	"compilerOptions": {
-		"outDir": "built"
+		"outDir": "built",
+		"noImplicitOverride": true
 	},
-	"include": ["src/*"]
+	"include": ["src/**/*"]
 }
