--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
 		"is-obj": "^2.0.0",
 		"is-promise": "^4.0.0",
 		"lodash.isequal": "^4.5.0",
+		"mariadb": "^2.5.4",
 		"mime-db": "^1.49.0",
 		"mime-types": "^2.1.32",
 		"node-fetch": "^2.6.1",
 		"ow": "^0.27.0",
 		"proto-list": "^1.2.4",
 		"require-all": "^3.0.0",
+		"sequelize": "^6.6.5",
 		"supports-color": "^7.2.0",
 		"ts-mixer": "^6.0.0",
 		"tslib": "^2.3.1",
