--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@sapphire/eslint-config": "^3.2.3",
 		"@sapphire/framework": "^2.0.0-next.71c18830.0",
 		"@sapphire/ts-config": "^3.0.0",
+		"@types/crypto-js": "^4.0.2",
 		"@types/validator": "^13.6.3",
 		"abort-controller": "^3.0.0",
 		"ansi-styles": "^4.3.0",
@@ -41,6 +42,7 @@
 		"combined-stream": "^1.0.8",
 		"common-tags": "^1.8.0",
 		"config-chain": "^1.1.13",
+		"crypto-js": "^4.1.1",
 		"delayed-stream": "^1.0.0",
 		"discord-api-types": "^0.22.0",
 		"discord.js": "^13.1.0",
